--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<p>Hey! You shouldn't be here, it's not ready!</p>
+<html>
+<head>
+<title>Redirecting...</title>
+<meta http-equiv="refresh" content="0;URL='https://github.com/kckarnige'" />
+</head>
+<body>
+</body>
+</html>
